<resources>
    <string name="app_name">Nasa</string>
    <string name="photo_of_the_day_stub">Photo of the day</string>
    <string name="search_wiki">Найти в Википедии</string>
    <string name="wiki_helper_text">Поищите термин в википедии</string>
    <string name="favourite">favourite</string>
    <string name="settings">settings</string>
    <string name="search">Search</string>
    <string name="today">Сегодня</string>
    <string name="yesterday">Вчера</string>
    <string name="after_yesterday">Позавчера</string>
    <string name="hd">HD</string>
    <string name="defaultTheme">Default</string>
    <string name="red">Red</string>
    <string name="yellow">Yellow</string>
    <string name="btn_apply">Применить</string>
    <string name="theme">Тема</string>

    <string name="solar_system">Solar system</string>
    <string name="earth">Земля</string>
    <string name="mars">Марс</string>
    <string name="weather">Погода</string>
    <string name="sd">SD</string>
</resources>